# chaimcp

./: .coverage  .docs.html.swp  .gitignore  CNAME  Dockerfile  README.md  capture_diagram.js  capture_diagram_v2.js  chaimcp-tls.yaml  coverage.json  debug_minimal.mmd  deploy_local.sh  diagram_styles.css  docs.html  generate_report.py  index.html  input.css  inspect_mcp.py  inspect_routes.py  install.sh  k8s_diagram.mmd  local_bridge.py  logo_processor.html  mermaid_config.json  package-lock.json  package.json  process_logo.py  pyproject.toml  report.json  requirements.txt  restore_deployment.sh  scan_security.py  security.html  style.css  tailwind.config.js  temp_diagram.html  test_app.py  test_report.html  test_requests.py  test_server.py  (+6 more)
.github/workflows/: deploy.yml
design-system/mcpch.ai/: MASTER.md
directives/: example_directive.md
execution/: example_script.py
k8s/: Dockerfile  configmap.yaml  deployment.yaml  entrypoint.sh  ingress.yaml  issuer.yaml  network-policy.yaml  port_forward.sh  secret.yaml  service.yaml
skills/deploy-and-verify/: SKILL_deployandverify.md
src/chaimcp/: chia_client.py  config.py  main.py
tests/: test_chia_client.py  test_config.py  test_deployment.py  test_disabled_tools.py  test_k8s_network.py  test_main.py  test_npx_launch.py  test_server.py
